5.4.1 -> 5.4.2
    - proyvind: don't pick up python version from python egg, rely on path
	only in stead to avoid incorrect version dependencies if any other
	egg metadata for other versions is found.
    - mdawkins: updated changelog in rpm.spec.in
    - mdawkins: tagged 5.4.2 release in configure.ac

5.4.0 -> 5.4.1:
    - devzero2000: In fpLookupSubdir, data returned by hash should be of type
      "struct rpmffi_s **" instead of "struct rpmffi_s *" to avoid
      segfault. Patch by Qing He.
    - devzero2000: added gcc-c++ in devtool.conf for fedora (required by beecrypt)
    - devzero2000: added fedora per platform macro from redhat-rpm-config
    - devzero2000: added suse to the per vendor change configure.ac enabler
    - devzero2000: added suse.in macros file from rpm-4.9.0-122
      (http://tinyurl.com/3vo287b)
    - devzero2000: resurrect openwall (owl) vendor detection
      (http://cvsweb.openwall.com/cgi/cvsweb.cgi/~checkout~/Owl/packages/rpm/rpm-4.2-owl-vendor-setup.diff?rev=1.3;content-type=text%2Fplain)
      They are using rpm 4.2 with, apparently, the missing CVE-2010-2059 patch. This is strange enough
      i think http://www.openwall.com/lists/oss-security/2010/06/02/2.
    - devzero2000: Sort file list for debuginfo extraction. 
      (inspired by Robert Schiele http://lists.rpm.org/pipermail/rpm-list/2011-May/000894.html)
    - proyvind: update doxygen input filename paths.
    - proyvind: fix assertion error when trying to install packages without
	required permissions.
    - devzero2000: document --whatneeds and --needswhat
      (ref. https://bugzilla.redhat.com/show_bug.cgi?id=142651)
    - proyvind: fix an extremely subtle, corner-case memleak in parsePreamble.c
    - jbj: dreamplug: build options.
    - jbj: openmamba: explicit neon linkage isn't right solution, revert/todo++.
    - jbj: monga: build options.
    - jbj: openmamba: --with-neon=internal needs libs to be added explicitly
	to linkage.